loopfor.LoopCourse.scala.error
Erreur de compilation :
LoopCourse:2: error: '<-' expected but ')' found.
for (j<=1 to 10) {
               ^LoopCourse:21: error: illegal start of simple expression
	}
        ^